--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vapi-ai/web": "^2.3.0",
     "axios": "^1.9.0",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
